[gd_scene load_steps=17 format=3 uid="uid://bo8i2glbe0u23"]

[ext_resource type="Script" uid="uid://bfq0pt6ajyow1" path="res://scripts/entities/enemies/fortifier/fortifier.gd" id="1_q7o8q"]
[ext_resource type="PackedScene" uid="uid://b3u2ccl0ibwdw" path="res://art_assets/enemies/fortifier/fort2glb.glb" id="2_3safb"]
[ext_resource type="Script" uid="uid://dcfoaiv83pvo4" path="res://scripts/utility/states/state_machine.gd" id="2_ko5h1"]
[ext_resource type="Script" uid="uid://irxuylaptnty" path="res://scripts/entities/enemies/states/dead.gd" id="3_cs6dd"]
[ext_resource type="Script" uid="uid://cplhuefak4xe6" path="res://scenes/dev/ian_r/fortifier_states/fortifier_idle.gd" id="3_cwf65"]
[ext_resource type="PackedScene" uid="uid://pv4ghgiiejhk" path="res://scenes/dev/christian_d/enemy_status_bar.tscn" id="3_ko5h1"]
[ext_resource type="Script" uid="uid://ccipy7c0880vt" path="res://scenes/dev/ian_r/fortifier_states/fortifier_aggro.gd" id="4_ev8td"]
[ext_resource type="Script" uid="uid://6mm7aq2ddphu" path="res://scenes/dev/ian_r/fortifier_states/fortifier_shielding.gd" id="5_gtlnc"]
[ext_resource type="Script" uid="uid://bjlnudp8j65ma" path="res://scripts/entities/animation_state.gd" id="8_r7rop"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_unhng"]
animation = &"2nd"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_waxsb"]
animation = &"round"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tcoa5"]
states/2nd/node = SubResource("AnimationNodeAnimation_unhng")
states/2nd/position = Vector2(337, 64)
states/round/node = SubResource("AnimationNodeAnimation_waxsb")
states/round/position = Vector2(337, 122)

[sub_resource type="BoxShape3D" id="BoxShape3D_lnb36"]
size = Vector3(1.34, 2.33, 1.56)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g0rg0"]
height = 1.0
radius = 15.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3ex7s"]
height = 1.0
radius = 10.0

[sub_resource type="ViewportTexture" id="ViewportTexture_g0rg0"]
viewport_path = NodePath("SubViewport")

[node name="Fortifier" type="CharacterBody3D"]
collision_layer = 10
collision_mask = 3
script = ExtResource("1_q7o8q")
recalc_cd = 1.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_ko5h1")
metadata/_custom_type_script = "uid://dcfoaiv83pvo4"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_cwf65")
metadata/_custom_type_script = "uid://cplhuefak4xe6"

[node name="Aggro" type="Node" parent="StateMachine"]
script = ExtResource("4_ev8td")
metadata/_custom_type_script = "uid://ccipy7c0880vt"

[node name="Shielding" type="Node" parent="StateMachine"]
script = ExtResource("5_gtlnc")
metadata/_custom_type_script = "uid://6mm7aq2ddphu"

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource("3_cs6dd")
metadata/_custom_type_script = "uid://irxuylaptnty"

[node name="fort2glb" parent="." instance=ExtResource("2_3safb")]
transform = Transform3D(0.705, 0, 0, 0, 0.705, 0, 0, 0, 0.705, -1.155, -1.52, 0.285)

[node name="AnimationTree" type="AnimationTree" parent="fort2glb"]
tree_root = SubResource("AnimationNodeStateMachine_tcoa5")
anim_player = NodePath("../AnimationPlayer")

[node name="Idle" type="Node" parent="fort2glb"]
script = ExtResource("8_r7rop")
state_name = "2nd"
animation_tree = Object(AnimationTree,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","active":true,"deterministic":true,"reset_on_save":true,"root_node":NodePath(".."),"root_motion_track":NodePath(""),"root_motion_local":false,"audio_max_polyphony":32,"callback_mode_process":1,"callback_mode_method":0,"callback_mode_discrete":2,"tree_root":SubResource("AnimationNodeStateMachine_tcoa5"),"advance_expression_base_node":NodePath("."),"anim_player":NodePath("../AnimationPlayer"),"script":null)

metadata/_custom_type_script = "uid://bjlnudp8j65ma"

[node name="shielding" type="Node" parent="fort2glb"]
script = ExtResource("8_r7rop")
state_name = "round"
animation_tree = Object(AnimationTree,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","active":true,"deterministic":true,"reset_on_save":true,"root_node":NodePath(".."),"root_motion_track":NodePath(""),"root_motion_local":false,"audio_max_polyphony":32,"callback_mode_process":1,"callback_mode_method":0,"callback_mode_discrete":2,"tree_root":SubResource("AnimationNodeStateMachine_tcoa5"),"advance_expression_base_node":NodePath("."),"anim_player":NodePath("../AnimationPlayer"),"script":null)

metadata/_custom_type_script = "uid://bjlnudp8j65ma"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_lnb36")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 7.0
path_max_distance = 100.01
debug_path_custom_color = Color(0, 1, 0, 1)

[node name="Hitboxes" type="Node3D" parent="."]

[node name="Aggro" type="Area3D" parent="Hitboxes"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Aggro"]
shape = SubResource("CylinderShape3D_g0rg0")
debug_color = Color(1, 0, 0, 1)

[node name="Shield" type="Area3D" parent="Hitboxes"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Shield"]
shape = SubResource("CylinderShape3D_3ex7s")
debug_color = Color(1, 0, 0, 1)

[node name="StatusBars" parent="." instance=ExtResource("3_ko5h1")]
transform = Transform3D(0.70710677, -0.4055798, 0.579228, 0, 0.81915206, 0.57357645, -0.70710677, -0.4055798, 0.579228, 0, 2.997466, 0)
texture = SubResource("ViewportTexture_g0rg0")

[connection signal="break_update" from="." to="StatusBars" method="update_break"]
[connection signal="health_update" from="." to="StatusBars" method="update_health"]
[connection signal="entered" from="StateMachine/Idle" to="fort2glb/Idle" method="enter"]
[connection signal="shield_enemy" from="StateMachine/Shielding" to="fort2glb/shielding" method="enter"]
[connection signal="body_entered" from="Hitboxes/Aggro" to="." method="_on_aggro_body_entered"]
[connection signal="body_exited" from="Hitboxes/Aggro" to="." method="_on_aggro_body_exited"]
[connection signal="body_entered" from="Hitboxes/Shield" to="." method="_on_shield_body_entered"]
[connection signal="body_exited" from="Hitboxes/Shield" to="." method="_on_shield_body_exited"]

[editable path="fort2glb"]
